Fix scrollbars in emails

--- a/web/css/style.less
+++ b/web/css/style.less
@@ -101,6 +101,7 @@ article {
 
     .email-content {
         overflow-x: auto;
+        overflow-y: hidden;
     }
     /* Collapse last blockquote of an email */
     .email-content>blockquote:last-child {
